<resources>
    <string name="app_name">TestSystem Application</string>

    <string name="settings">settings</string>
    <string name="calculate">calculate</string>
    <string name="i_agress">I agress</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="test_button">test button</string>
</resources>
